--- a/src/Style/nav.css
+++ b/src/Style/nav.css
@@ -16,7 +16,7 @@
     justify-content: center;
     display: flex;
     position: relative;
-    width: 40px;
+    min-width: 40px;
     height: 30px;
     padding: 0 3px;
 }
@@ -32,6 +32,6 @@
     border-right: 5px solid transparent;
     border-top: 5px solid #ff2554;
     position: absolute;
-    bottom: -18%;
+    bottom: -17%;
     left: 40%;
 }
